# base_bot

./: .gitignore  Cargo.toml  active_pools.json  deploy.sh  gasless-exec.sh  get-gas.sh  keeper-bot.sh  plan_base_v1.md  run_dryrun.sh
contracts/: FlashArbV2.sol  LongtailArb.sol  UnifiedArb.sol
infra/: reth-base-userdata.sh
ml/: dynamic_hunter.py  event_hunter.py  execute_ml_routes.py  flash_hunter.py  gas_predictor.py  hunter_v2.py  live_scanner.py  ml_engine.py  multi_hunter.py  pnl_tracker.py  profit_hunter.py  realtime_hunter.py  route_scorer.py  token_blacklist.py
src/: arbitrage.rs  backrun.rs  blacklist.rs  competition.rs  config.rs  executor.rs  gas_predictor.rs  liquidation.rs  main.rs  multicall.rs  oracle_arb.rs  pnl.rs  pools.rs  rpc.rs  safety.rs  signer.rs  telegram.rs  websocket.rs
