[package]
name = "longtail-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.0", features = ["full", "sol-types"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6"
rand = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
